[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
actix-web = "4.4.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"]} 
serde = { version = "1.0.194", features = ["derive"]}

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.11.23"
